--- a/frontend_react/package.json
+++ b/frontend_react/package.json
@@ -10,12 +10,12 @@
     "@testing-library/user-event": "^13.5.0",
     "caniuse-lite": "^1.0.30001486",
     "framer-motion": "^7.4.0",
-    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^4.2.21",
+    "sass": "^1.63.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
